fix h1 text covered by p headline

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -59,7 +59,6 @@ h1 {
   font-size: 72px;
   height: 100px;
   font-weight: 300;
-  height: 7%;
   line-height: 1.5;
 }
 
